<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_past_product"
        android:name="com.example.annual_follow_up.product_pages.past_product.PastProductFragment"
        android:label="@string/title_past_product"
        tools:layout="@layout/fragment_past_product" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.annual_follow_up.product_pages.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_entry_product"
        android:name="com.example.annual_follow_up.product_pages.entry_product.EntryProductFragment"
        android:label="@string/title_entry_product"
        tools:layout="@layout/fragment_entry_product" />
</navigation>